--- a/style.css
+++ b/style.css
@@ -47,3 +47,16 @@ body {
   z-index: 100;
   white-space: pre;
 }
+#loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-size: 1.2rem;
+  text-align: center;
+  z-index: 1000;
+}
